# WhisperLiveKit-GUI

./: .gitignore  .gitmodules  AGENTS.md  Dockerfile  README-FOR-WRAPPER.md  README.md  WRAPPER-DEV-LOG.md  pixi.toml  pyproject.toml  requirements-cuda.txt  requirements.txt  run_server.sh  run_test.sh  timed_objects.py  tmp_readme.txt  tmp_segment.txt  translation_online.py  whisper_fastapi_online_server.py  whisper_noserver_test.py
.venv copy/: pyvenv.cfg
src/translation/: translation.py
src/whisper/: timestaped_words.py
src/whisper_streaming/: online_asr.py  whisper_online.py
tests/: send_audio_to_server.py  test_short_recording_transcription.py  test_transcription_flush.py
tests/whisper/: test_timestamped_words.py
web/: live_transcription.html
whisper_streaming_custom/: backends.py  online_asr.py
whisperlivekit/: Dockerfile  README.md  audio_processor.py  core.py
whisperlivekit/diarization/: diart_backend.py
whisperlivekit/whisper_streaming_custom/: backends.py  online_asr.py  whisper_online.py
wrapper/: licenses.json  requirements-cpu-amd.txt  requirements-nvidia.txt
wrapper/api/: server.py
wrapper/app/: backend_launcher.py  gui.py  model_manager.py  preflight.py
wrapper/app/avalonia_ui.Tests/: LicenseWindowTests.cs  MainWindowTests.cs  (+1 more)
wrapper/assets/: __init__.py
wrapper/cli/: main.py  model_manager_cli.py
wrapper/config/: settings.example.json
wrapper/scripts/: build_msix.ps1  full_stack_integration_test.py  generate_licenses.py  install_publisher_cert.ps1  make_dev_https_cert.ps1  run_avalonia_tests.py  test_fastwhisper_cache.py
(+19 files in other folders)
