[project]
name = "whisper-streaming-web"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.6,<0.116",
    "mlx-whisper>=0.4.1,<0.5",
    "mosestokenizer",
    "uvicorn[standard]", # for server
    "sentencepiece>=0.2.0,<0.3",
    "torch>=2.5.1,<3",
    "ffmpeg-python>=0.2.0,<0.3",
    "wtpsplit>=2.1.2,<3",
    "tokenize-uk>=0.2.0,<0.3",
    "faster-whisper>=1.1.0,<2",
    "torchaudio>=2.5.1,<3",
    "librosa>=0.10.2.post1",
]



